--- a/src/styles/layouts/_contact-container.scss
+++ b/src/styles/layouts/_contact-container.scss
@@ -4,8 +4,8 @@
 .contact-container {
   display: flex;
   flex-direction: column;
-  gap: $gap-3xl;
-  margin-bottom: 64px;
+  gap: $gap-lg;
+  margin-bottom: $space-4xl;
 
 
   @include tablet {
